Refactoring: NodeStyle + test